# updatedChatbot

./: .gitignore  CHANGES_EXPLANATION.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION.md  Dockerfile  README.md  api_v2.py  db.py  email_service.py  index.html  lambda_handler.py  main.py  mcp_server.py  otp_utils.py  payload.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
static/: wedgie.js
